--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -1,6 +1,6 @@
 /*-------------------PHONE VERSION---------------------*/
 
-@media  all and (max-width : 568px) { @charset "UTF-8";
+@media (hover: none) { @charset "UTF-8";
 
 @font-face
 {
