--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -104,7 +104,7 @@ font-family:'Open Sans', sans-serif;
 }
     
 #bgimage {
-  background-image: url(/images/noisebg.jpg);
+  background-image: url(/Noise_Site/images/noisebg.jpg);
   background-size: cover;
   position: relative;
   background-position: center;
