--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -1,6 +1,6 @@
-/*-------------------PHONE VERSION---------------------*/
+/*-------------------PHONE VERSION-------(hover:none;) and--------------*/
 
-@media (hover: none) { @charset "UTF-8";
+@media   (hover:none;) { @charset "UTF-8";
 
 @font-face
 {
@@ -10,7 +10,7 @@ src: url(/fonts/badbe.ttf);
     @font-face
 {
 font-family: Code Light;
-src: url(/Noise_Site/fonts/codelight.otf);
+src: url(/fonts/codelight.otf);
 }
 @font-face
 {
@@ -47,12 +47,12 @@ font-family:'Open Sans', sans-serif;
 
     #menuboxes {
         position:relative;
-        top:-10px;
+        top:0%;
     }
     
     .menubox {
         width:100%;
-        height:100px;
+        height:12%;
         box-shadow: 1px -3px 5px #2d2d2d;   
         
     }
@@ -90,6 +90,7 @@ font-family:'Open Sans', sans-serif;
     }
     
     #socialwrapper{
+        position:relative;
         width:90%;
        margin:0 auto;
         
@@ -104,7 +105,7 @@ font-family:'Open Sans', sans-serif;
 }
     
 #bgimage {
-  background-image: url(/Noise_Site/images/noisebg.jpg);
+  background-image: url(/images/noisebg.jpg);
   background-size: cover;
   position: relative;
   background-position: center;
@@ -116,6 +117,138 @@ font-family:'Open Sans', sans-serif;
 }
     
     #logo {
+        visibility: visible;
+        position:fixed;
+        top:10px;
+        right:10px;
+        width:40%;
+        }
+
+
+
+} 
+
+/*---------- Small Screen Version ----------------------*/
+
+@media (max-width : 568px)
+{ @charset "UTF-8";
+
+@font-face
+{
+font-family: badbe;
+src: url(/fonts/badbe.ttf);
+}
+    @font-face
+{
+font-family: Code Light;
+src: url(/fonts/codelight.otf);
+}
+@font-face
+{
+font-family: grapat;
+src: url(/fonts/grapat.ttf);
+}
+a:link {color:#fff; text-decoration:none; font-family:'Open Sans', sans-serif;}
+a:visited {color:#fff; text-decoration:none; font-family:'Open Sans', sans-serif;}
+a:active {color:#ccc; text-decoration:none; font-family:'Open Sans', sans-serif;}
+a:hover {color:#fff; text-decoration:none; font-family:'Open Sans', sans-serif;}
+a:focus {color:#fff; text-decoration:none; font-family:'Open Sans', sans-serif;}
+
+html, body {
+    width:100%;
+    background:rgb(000,000,000);
+    color: #fff;
+    margin:0px;
+    overflow:auto;
+font-family:'Open Sans', sans-serif;
+   
+}
+    
+    
+#content {
+    clear:both;
+    padding-top:40px;
+    padding-bottom:20px;
+    height:auto;
+    width:100%;
+    color:#000; 
+    box-sizing:border-box;
+
+}
+
+    #menuboxes {
+        position:relative;
+        top:0%;
+    }
+    
+    .menubox {
+        width:100%;
+        height:12%;
+        box-shadow: 1px -3px 5px #2d2d2d;   
+        
+    }
+    
+    .menubox a {
+        position:relative;
+        font-family: 'Code Light';
+        font-size: 55px;
+        top:20px;
+        left:40px;
+    }
+    
+    #box1 {
+        position:relative;
+        background:rgb(43,78,96);   
+        margin-top:-470px;
+        
+    }
+      #box2 {
+        position:relative;
+        background:rgb(66,119,147);   
+        margin-top:-5px;
+        
+    }
+      #box3 {
+        position:relative;
+        background:rgb(11,46,65);   
+        margin-top:-5px;
+        
+    }
+    
+    #socialmedia{
+        width:100%;
+        padding-top:60px;
+    }
+    
+    #socialwrapper{
+        position:relative;
+        width:90%;
+       margin:0 auto;
+        
+    }
+
+    #socialmedia img { 
+        position:relative;
+        width:24%;
+        margin:auto;
+        opacity:.9
+        
+}
+    
+#bgimage {
+  background-image: url(/images/noisebg.jpg);
+  background-size: cover;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+    opacity:.2;
+    filter:contrast(400%);
+}
+    
+    #logo {
+        visibility: visible;
         position:fixed;
         top:10px;
         right:10px;
