--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -1,6 +1,6 @@
 /*-------------------PHONE VERSION-------(hover:none;) and--------------*/
 
-@media all  (hover:none;) { @charset "UTF-8";
+@media all and (hover:none;) { @charset "UTF-8";
 
 @font-face
 {
