--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -1,6 +1,6 @@
 /*-------------------PHONE VERSION-------(hover:none;) and--------------*/
 
-@media screen (max-width : 568;) { @charset "UTF-8";
+@media screen (max-width : 568px;) { @charset "UTF-8";
 
 @font-face
 {
