--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -6,8 +6,7 @@
     @font-face
 {
 font-family: 'Code Light';
-src: url('/Noise_Site/fonts/codelight.otf') format ('opentype'),
-     url('/Noise_Site/fonts/codelight.ttf') format ('truetype'),
+src: url('/Noise_Site/fonts/codelight.ttf') format ('truetype'),
      url('/Noise_Site/fonts/codelight.woff') format ('woff'),
      url('/Noise_Site/fonts/codelight.woff2') format ('woff2');
 }
