--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -5,7 +5,7 @@
 
     @font-face
 {
-font-family: 'Code Light';
+font-family: 'Code-Light';
 src: url('/Noise_Site/fonts/codelight.ttf') format ('truetype'),
      url('/Noise_Site/fonts/codelight.woff') format ('woff'),
      url('/Noise_Site/fonts/codelight.woff2') format ('woff2');
