--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -6,9 +6,12 @@
     @font-face
 {
 font-family: 'Code-Light';
-src: url('/Noise_Site/fonts/codelight.ttf') format ('truetype'),
-     url('/Noise_Site/fonts/codelight.woff') format ('woff'),
-     url('/Noise_Site/fonts/codelight.woff2') format ('woff2');
+src: url('/Noise_Site/fonts/codelight.otf') format ('truetype'),
+    url('/Noise_Site/fonts/code_light.ttf') format ('truetype'),
+     url('/Noise_Site/fonts/code_light.woff') format ('woff'),
+     url('/Noise_Site/fonts/code_light.woff2') format ('woff2');
+         url('/Noise_Site/fonts/code_light.svg#code-light') format ('svg');
+
 }
 
 
