--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -44,7 +44,7 @@ font-family:'Open Sans', sans-serif;
 }
     
     #logo {
-        visibility: visible;
+        visibility: hidden;
         position:fixed;
         top:10px;
         right:10px;
