--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -43,7 +43,7 @@ font-family:'Open Sans', sans-serif;
 }
     
     #logo {
-        visibility: hidden;
+        visibility: visible;
         position:fixed;
         top:10px;
         right:10px;
