--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -64,11 +64,13 @@ font-family:'Open Sans', sans-serif;
     #menuboxes {
         position:relative;
         top:55%;
+          font-family: 'Code Light';
     }
     
     .menubox {
         width:100%;
         height:12%;
+          font-family: 'Code Light';
         box-shadow: 1px -3px 5px #2d2d2d;   
         
     }
