--- a/Noise_Site/css/noise.css
+++ b/Noise_Site/css/noise.css
@@ -1,9 +1,4 @@
-/*-------------------PHONE VERSION-------(hover:none;) and--------------*/
-
-@media (hover : none) { @charset "UTF-8";
-
-
-    @font-face
+@font-face
 {
 font-family: "Code Light";
 src: url('/Noise_Site/fonts/code_light.ttf') format ('truetype'),
@@ -28,7 +23,7 @@ html, body {
 }
     
     #bgimage {
-  background-image: url(/Noise_Site/images/noisebg.jpg);
+  background-image: url(/images/noisebg.jpg);
   background-size: cover;
   position: fixed;
     display:block;
@@ -45,62 +40,69 @@ html, body {
         position:fixed;
         top:10px;
         right:10px;
-        width:40%;
+        height:12%;
         }
 
-    #flavortext{
-        font-size: 40px;
+.collapsible {
+    font-family: 'Code Light';
+    font-size: 60px;
+    top:20;
+    left:40;
+    text-align: left;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+    height:80px;
+  border: none;
+  outline: none;
+}
+
+#menubox1 {
+    background-color:rgb(43,78,96);  
+    
+}
+
+#menubox2 {
+    background-color:rgb(66,119,147);  
+    
+}
+#menubox3 {
+    background-color:rgb(11,46,65);  
+    
+    
+}
+
+#menu{
+    Position:relative;
+    top:20%;
+}
+
+  #flavortext{
+        font-size: 20px;
         text-align: center;
         font-family: 'Avenir';
         position:relative;
-        top:21%;
+        top:15%;
         width: 90%;
         margin-left: 5%;
         
     }
-    
-    #menuboxes {
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+    font-family: 'Avenir Next';
+}
+
+#mb3content{
+    margin-top:20px;
+}
+ #socialmedia{
         position:relative;
-        top:55%;
-    }
-    
-    .menubox {
-        width:100%;
-        height:12%;
-        box-shadow: 1px -3px 5px #2d2d2d;   
-        
-    }
-    
-    .menubox a {
-        position:relative;
-        font-family: 'Avenir';
-        font-size: 105px;
-        top:20px;
-        left:40px;
-    }
-    
-    #box1 {
-        position:relative;
-        background:rgb(43,78,96);   
-        margin-top:-470px;
-        
-    }
-      #box2 {
-        position:relative;
-        background:rgb(66,119,147);   
-        margin-top:-5px;
-        
-    }
-      #box3 {
-        position:relative;
-        background:rgb(11,46,65);   
-        margin-top:-5px;
-        
-    }
-    
-    #socialmedia{
-        position:relative;
-        bottom:-60%;
+        top:20%;
         width:100%;
         padding-top:60px;
     }
@@ -115,16 +117,8 @@ html, body {
     #socialmedia img { 
         position:relative;
         width:24%;
+        max-width:100px;
         margin:auto;
         opacity:.9
         
 }
-    
-
-
-
-
-} 
-
-/*---------- Small Screen Version ----------------------*/
-
