--- a/css/noise.css
+++ b/css/noise.css
@@ -1,8 +1,8 @@
 @font-face
 {
 font-family: "Code Light";
-src: url('/Noise_Site/fonts/code_light.ttf') format ('truetype'),
-     url('/Noise_Site/fonts/code_light.woff') format ('woff'),
+src: url('/Noise_Site/fonts/code_light.ttf') format ('truetype');
+     url('/Noise_Site/fonts/code_light.woff') format ('woff');
      url('/Noise_Site/fonts/code_light.woff2') format ('woff2');
      url('/Noise_Site/fonts/code_light.svg#code_lightregular') format ('svg');
 
