--- a/css/noise.css
+++ b/css/noise.css
@@ -53,7 +53,7 @@ html, body {
   cursor: pointer;
   padding: 18px;
   width: 100%;
-    height:80px;
+    height:10%;
   border: none;
   outline: none;
 }
