--- a/css/noise.css
+++ b/css/noise.css
@@ -1,6 +1,6 @@
 @font-face
 {
-font-family: "Code Light";
+font-family: Code Light;
 src: url('/fonts/code_light.ttf') format ('truetype');
      url('/fonts/code_light.woff') format ('woff');
      url('/fonts/code_light.woff2') format ('woff2');
