--- a/css/noise.css
+++ b/css/noise.css
@@ -1,9 +1,9 @@
 @font-face
 {
-font-family: Code Light;
-src: url('/fonts/code_light.ttf') format ('truetype');
-     url('/fonts/code_light.woff') format ('woff');
-     url('/fonts/code_light.woff2') format ('woff2');
+font-family: 'Code Light';
+src: url('/fonts/code_light.ttf') format ('truetype'),
+     url('/fonts/code_light.woff') format ('woff'),
+     url('/fonts/code_light.woff2') format ('woff2'),
      url('/fonts/code_light.svg#code_lightregular') format ('svg');
 
     }
