--- a/css/noise.css
+++ b/css/noise.css
@@ -16,6 +16,7 @@ a:focus {color:#fff; text-decoration:none; font-family:'Open Sans', sans-serif;}
 
 html, body {
     width:100%;
+    height:100%;
     background:rgb(000,000,000);
     color: #fff;
     margin:0px;
@@ -53,13 +54,14 @@ html, body {
   cursor: pointer;
   padding: 18px;
   width: 100%;
+    height:10%;
+    min-height:80px;
   border: none;
   outline: none;
 }
 
 #menubox1 {
     background-color:rgb(43,78,96);  
-     height:200px;
     
 }
 
@@ -100,17 +102,20 @@ html, body {
 #mb3content{
     margin-top:20px;
 }
+
+
  #socialmedia{
         position:relative;
-        top:20%;
         width:100%;
-        padding-top:60px;
+        padding-top:0px;
+     
     }
     
     #socialwrapper{
-        position:rel;
-        width:90%;
-       margin:0 auto;
+        position:relative;
+        top:35%;
+    text-align: center;
+        width:100%;
         
     }
 
@@ -118,7 +123,7 @@ html, body {
         position:relative;
         width:24%;
         max-width:100px;
-        margin:auto;
+    
         opacity:.9
         
 }
